syntax = "proto3";

option go_package = "./taskpb";

service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
  rpc GetTask(GetTaskRequest) returns (Task);
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse);
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
}

message Task {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string description = 4;
  bool done = 5;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
}

message CreateTaskResponse {
  string id = 1;
}

message GetTaskRequest {
  string id = 1;
}

message ListTasksRequest {}

message ListTasksResponse {
  repeated Task tasks = 1;
}

message UpdateTaskRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  bool done = 4;
}

message UpdateTaskResponse {
  string message = 1;
}

message DeleteTaskRequest {
  string id = 1;
}

message DeleteTaskResponse {
  string message = 1;
}
